config.jsonc を更新

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -30,7 +30,7 @@
   },
     
 	"clock": {
-		"format": "🕑 {:%H:%M:%S}",
+		"format": "🕑 {:%H:%M}",
     "tooltip-format": "{:%Y年%m月%d日 %A}"
   },
     
