hyprland.conf を更新

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,8 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = wofi --show 
+$browser = brave
 
 
 #################
@@ -246,6 +247,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = &mainMod, B, $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
